--- a/.env.dist
+++ b/.env.dist
@@ -8,3 +8,10 @@ APP_SECRET=a7962d9698d5ed4bfe0651ae852325cd
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS=localhost,example.com
 ###< symfony/framework-bundle ###
+google_clientID: 'ID'
+google_clientSecret: 'secret'
+###> google/apiclient ###
+GOOGLE_API_KEY=
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+###< google/apiclient ###
