--- a/composer.json
+++ b/composer.json
@@ -5,16 +5,15 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "google/apiclient": "^2.0",
         "sensio/framework-extra-bundle": "^5.2",
+        "symfony/asset": "*",
         "symfony/console": "*",
+        "symfony/dotenv": "*",
         "symfony/flex": "^1.1",
         "symfony/framework-bundle": "*",
         "symfony/maker-bundle": "^1.8",
-        "symfony/twig-bundle": "*",
         "symfony/yaml": "*"
-    },
-    "require-dev": {
-        "symfony/dotenv": "*"
     },
     "config": {
         "preferred-install": {
