--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,4 +1,4 @@
-# This file is the entry point to configure your own services.
+# This file is the entry point to configure your own service.
 # Files in the packages/ subdirectory configure your dependencies.
 
 # Put parameters here that don't need to change on each machine where the app is deployed
@@ -6,21 +6,21 @@
 parameters:
 
 services:
-    # default configuration for services in *this* file
+    # default configuration for service in *this* file
     _defaults:
-        autowire: true      # Automatically injects dependencies in your services.
-        autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
-        public: false       # Allows optimizing the container by removing unused services; this also means
-                            # fetching services directly from the container via $container->get() won't work.
+        autowire: true      # Automatically injects dependencies in your service.
+        autoconfigure: true # Automatically registers your service as commands, event subscribers, etc.
+        public: false       # Allows optimizing the container by removing unused service; this also means
+                            # fetching service directly from the container via $container->get() won't work.
                             # The best practice is to be explicit about your dependencies anyway.
 
-    # makes classes in src/ available to be used as services
+    # makes classes in src/ available to be used as service
     # this creates a service per class whose id is the fully-qualified class name
     App\:
         resource: '../src/*'
         exclude: '../src/{DependencyInjection,Entity,Migrations,Tests,Kernel.php}'
 
-    # controllers are imported separately to make sure services can be injected
+    # controllers are imported separately to make sure service can be injected
     # as action arguments even if you don't extend any base controller class
     App\Controller\:
         resource: '../src/Controller'
