--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,9 @@
 .vagrant
 .idea
 .env
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
