--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -9,5 +9,14 @@ easy_admin:
                     - { property: 'place', type: 'text', label: 'Place' }
                     - { property: 'lastSeen', type: 'datetime', label: 'Last seen on' }
                     - { property: 'sync', type: 'checkbox' , label: 'Sync device?' }
-        user:
+        Calendar:
+            class: App\Entity\Calendar
+            form:
+                fields:
+                    - 'id'
+                    - { property: 'name', type: 'text', label: 'Name'}
+                    - { property: 'Manager', label: 'Calendar type', type: choice, type_options: {choices: {'Google calendar':'GoogleCalendarManager', 'Outlook':'OutlookManager'}}}
+                    - board
+
+        User:
             class: App\Entity\User
