--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,14 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "easycorp/easyadmin-bundle": "^1.17",
+        "friendsofsymfony/rest-bundle": "^2.4",
         "friendsofsymfony/user-bundle": "2.1.2",
         "sensio/framework-extra-bundle": "^5.2",
         "symfony/console": "*",
         "symfony/flex": "^1.1",
         "symfony/framework-bundle": "*",
         "symfony/orm-pack": "^1.0",
+        "symfony/serializer": "4.1.*",
         "symfony/swiftmailer-bundle": "^3.2",
         "symfony/twig-bundle": "*",
         "symfony/webpack-encore-bundle": "^1.0",
