--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "friendsofsymfony/user-bundle": "2.1.2",
         "sensio/framework-extra-bundle": "^5.2",
         "symfony/console": "*",
+        "symfony/dotenv": "4.1.*",
         "symfony/flex": "^1.1",
         "symfony/framework-bundle": "*",
         "symfony/orm-pack": "^1.0",
@@ -21,7 +22,6 @@
         "twig/twig": "^2.0"
     },
     "require-dev": {
-        "symfony/dotenv": "*",
         "symfony/maker-bundle": "^1.9"
     },
     "config": {
